force-app/main/default/objects/sf_devops__Quality_Gate_Criteria_Result__c/sf_devops__Quality_Gate_Criteria_Result__c.object-meta.xml
<CustomObject>
    <label>Quality Gate Criteria Result</label>
    <nameField>
        <displayFormat>QGCR-{000000}</displayFormat>
        <label>Quality Gate Criteria Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Gate Criteria Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>