force-app/main/default/objects/sf_devops__Quality_Gate_Criteria_Result__c/fields/sf_devops__Quality_Gate_Rule_Criteria__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Quality_Gate_Rule_Criteria__c</fullName>
    <label>Quality Gate Rule Criteria</label>
    <referenceTo>sf_devops__Quality_Gate_Rule_Criteria__c</referenceTo>
    <relationshipLabel>Quality Gate Criteria Results</relationshipLabel>
    <relationshipName>Quality_Gate_Criteria_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>