force-app/main/default/objects/sf_devops__Quality_Gate_Criteria_Result__c/fields/sf_devops__Quality_Gate_Rule_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Quality_Gate_Rule_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Gate Rule Result</label>
    <referenceTo>sf_devops__Quality_Gate_Rule_Result__c</referenceTo>
    <relationshipLabel>Quality Gate Criteria Results</relationshipLabel>
    <relationshipName>Quality_Gate_Criteria_Results</relationshipName>
    <type>Lookup</type>
</CustomField>