force-app/main/default/objects/sf_devops__Quality_Gate_Criteria_Result__c/fields/sf_devops__Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>