force-app/main/default/objects/sf_devops__Quality_Gate_Criteria_Result__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Sequence__c</columns>
    <columns>sf_devops__Quality_Gate_Rule_Criteria__c</columns>
    <columns>sf_devops__Quality_Gate_Rule_Result__c</columns>
    <columns>sf_devops__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>